--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -13,7 +13,7 @@ scrape_configs:
     static_configs:
       - targets: [ 'sflow-rt:8008' ] 
   - job_name: 'sflow-rt-interfaces'
-    metrics_path: /prometheus/metrics/ALL/ifinutilization,ifoututilization,ifinerrors,ifouterrors,ifindiscards,ifoutdiscards/txt
+    metrics_path: /prometheus/metrics/ALL/ifinoctets,ifoutoctets,ifspeed,ifinutilization,ifoututilization,ifinerrors,ifouterrors,ifindiscards,ifoutdiscards/txt
     scheme: http
     static_configs:
       - targets: [ 'sflow-rt:8008' ]
