Expose sFlow-RT container RTMEM and RTPROP environment variables

--- a/compose.yml
+++ b/compose.yml
@@ -10,6 +10,9 @@ services:
     container_name: sflow-rt
     user: ${DOCKER_USER}
     restart: unless-stopped
+    environment:
+      - RTMEM=${RTMEM:-1G}
+      - RTPROP=${RTPROP:-}
     volumes:
       - ./sflow-rt/store:/sflow-rt/store
     ports:
