Settable Prometheus retention, default 30d

--- a/compose.yml
+++ b/compose.yml
@@ -31,6 +31,10 @@ services:
     volumes:
       - ./prometheus/prometheus.yml:/etc/prometheus/prometheus.yml
       - ./prometheus/var:/prometheus
+    command:
+      - --config.file=/etc/prometheus/prometheus.yml
+      - --storage.tsdb.path=/prometheus
+      - --storage.tsdb.retention.time=${PROM_RETENTION:-30d}
     ports:
       - '9090:9090'
     networks:
